<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delta2a_lidar</name>
  <version>0.1.0</version>
  <description>ROS2 driver for 3iRobotics Delta-2A LiDAR</description>
  <maintainer email="user@example.com">azim</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <!-- THIS IS THE MISSING PART -->
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
